fix alt.html yt-integ

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -188,14 +188,22 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8sQoX12zo-A"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/TOypSnKFHrE"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8sQoX12zo-A"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/TOypSnKFHrE"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres des The Strokes, The End Has No End (2003) et Last Nite (2001)
@@ -361,14 +369,22 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ma9I9VBKPiw"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/bpOSxM0rNPM"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ma9I9VBKPiw"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/bpOSxM0rNPM"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres des Arctic Monkeys, Fluorescent Adolescent (2007) et Do I Wanna Know ? (2013)
@@ -496,14 +512,22 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ktvTqknDobU"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/fmI_Ndrxy14"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ktvTqknDobU"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/fmI_Ndrxy14"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres de Imagine Dragons, Radioactive (2012) et Warriors (2014) -Musique des Worlds League
@@ -662,14 +686,22 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres des The White Strips, Seven Nation Army (2003) et Icky Thump (2007)
@@ -681,11 +713,11 @@
             <article>
                 <h3>
                     <div class="multi-link">
-                        <span>The White Strips</span>
+                        <span>Cage The Elephant</span>
                         <div>
-                            <a href="https://open.spotify.com/artist/4F84IBURUo98rz4r61KF70" target="_blank"><img
+                            <a href="https://open.spotify.com/artist/26T3LtbuGT1Fu9m0eRq5X3" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                            <a href="https://fr.wikipedia.org/wiki/The_White_Stripes" target="_blank"><img
+                            <a href="https://fr.wikipedia.org/wiki/Cage_the_Elephant" target="_blank"><img
                                     class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                             <a href="https://www.youtube.com/user/whitestripes" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
@@ -827,14 +859,22 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
-                <figure class="double-yt">
+                <figure class="yt-integ">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
                     <figcaption>
                         Deux titres des The White Strips, Seven Nation Army (2003) et Icky Thump (2007)
