ajout_bg_mobile+multi-link_manquants

--- a/music/rap.html
+++ b/music/rap.html
@@ -309,14 +309,84 @@
                         soutenir, je vais le faire pour vous : "Allez-vous faire *** !" » .
                         Ses principaux titres sont Lose yourself, Stan, Mockingbird, Without me, Rap God.
                         Il existe de nombreux autres rappeurs américains connus, comme
-                        <a href="https://fr.wikipedia.org/wiki/Kanye_West" target="_blank ">Kanye West</a>,
-                        <a href="https://fr.wikipedia.org/wiki/Fat_Joe" target="blank"> Fat Joe </a>,
-                        <a href="https://fr.wikipedia.org/wiki/ASAP_Rocky" target="blank">Asap Rocky</a>,
-                        <a href="https://fr.wikipedia.org/wiki/XXXTentacion" target="blank">XXXTentacion</a>,
-                        <a href="https://fr.wikipedia.org/wiki/Jay-Z" target="blank">Jay Z</a>,
-                        <a href="https://fr.wikipedia.org/wiki/Snoop_Dogg" target="blank">Snoop Dog</a>,
-                        <a href="https://fr.wikipedia.org/wiki/Dr._Dre" target="blank">Dr Dre</a>, et beaucoup d'autres.
-                        <!--  ajouter liens spotify + youtube de chasque artiste   -->
+                        <div class="multi-link">
+                            <span>Kanye West</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Kanye_West" target="_blank"><img
+                                        class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/kanyewest" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>Fat Joe</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/3ScY9CQxNLQei8Umvpx5g6" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Fat_Joe" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/channel/UCLQesB1lCdsV2gl0kK_lOcg" target="_blank"><img
+                                        class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>A$ap Rocky</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/13ubrt8QOOCPljQ2FL1Kca" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/ASAP_Rocky" target="_blank"><img
+                                        class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/ASAPROCKYUPTOWN" target="_blank"><img
+                                        class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>XXXTentacion</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/15UsOTVnJzReFVN1VCnxy4" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/XXXTentacion" target="_blank"><img
+                                        class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/channel/UCM9r1xn6s30OnlJWb-jc3Sw" target="_blank"><img
+                                        class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>Jay Z</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/3nFkdlSjzX9mRTtwJOzDYB" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Jay-Z" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/jayz" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>Snoop Dog</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Snoop_Dogg" target="_blank"><img
+                                        class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/westfesttv" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        <div class="multi-link">
+                            <span>Dr Dre</span>,
+                            <div>
+                                <a href="https://open.spotify.com/artist/6DPYiyq5kWVQS4RGwxzPC7" target="_blank"><img
+                                        class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                <a href="https://fr.wikipedia.org/wiki/Dr._Dre" target="_blank"><img class="wiki-icon"
+                                        src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                <a href="https://www.youtube.com/user/DrDreVEVO" target="_blank"><img class="yt-icon"
+                                        src="../images/icons/yt.png" alt="youtube link" /></a>
+                            </div>
+                        </div>
+                        et beaucoup d'autres.
                     </div>
                     <div class="spotify-integ">
                         <div>
