removed useless inherit

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -192,14 +192,14 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/8sQoX12zo-A"
+                                <iframe src="https://www.youtube-nocookie.com/embed/8sQoX12zo-A"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/TOypSnKFHrE"
+                                <iframe src="https://www.youtube-nocookie.com/embed/TOypSnKFHrE"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
@@ -373,14 +373,14 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ma9I9VBKPiw"
+                                <iframe src="https://www.youtube-nocookie.com/embed/ma9I9VBKPiw"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/bpOSxM0rNPM"
+                                <iframe src="https://www.youtube-nocookie.com/embed/bpOSxM0rNPM"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
@@ -516,14 +516,14 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ktvTqknDobU"
+                                <iframe src="https://www.youtube-nocookie.com/embed/ktvTqknDobU"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/fmI_Ndrxy14"
+                                <iframe src="https://www.youtube-nocookie.com/embed/fmI_Ndrxy14"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
@@ -690,14 +690,14 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
+                                <iframe src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
+                                <iframe src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
@@ -863,14 +863,14 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
+                                <iframe src="https://www.youtube-nocookie.com/embed/0J2QdDbelmY"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
+                                <iframe src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
