--- a/music/rock.html
+++ b/music/rock.html
@@ -622,21 +622,21 @@
                     <div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YlUKcNNmywk"
+                                <iframe src="https://www.youtube-nocookie.com/embed/YlUKcNNmywk"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                             <div>
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/6Ejga4kJUts"
+                                <iframe src="https://www.youtube-nocookie.com/embed/6Ejga4kJUts"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                         <div>
                                 <div>
-                                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
+                                    <iframe src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
                                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
                                 </div>
