--- a/music/rap.html
+++ b/music/rap.html
@@ -310,7 +310,7 @@
                         Ses principaux titres sont Lose yourself, Stan, Mockingbird, Without me, Rap God.
                         Il existe de nombreux autres rappeurs américains connus, comme
                         <div class="multi-link">
-                            <span>Kanye West</span>,
+                            <span>Kanye West</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -320,8 +320,9 @@
                                         src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>Fat Joe</span>,
+                            <span>Fat Joe</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/3ScY9CQxNLQei8Umvpx5g6" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -331,8 +332,9 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>A$ap Rocky</span>,
+                            <span>A$ap Rocky</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/13ubrt8QOOCPljQ2FL1Kca" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -342,8 +344,9 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>XXXTentacion</span>,
+                            <span>XXXTentacion</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/15UsOTVnJzReFVN1VCnxy4" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -353,8 +356,9 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>Jay Z</span>,
+                            <span>Jay Z</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/3nFkdlSjzX9mRTtwJOzDYB" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -364,8 +368,9 @@
                                         src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>Snoop Dog</span>,
+                            <span>Snoop Dog</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -375,8 +380,9 @@
                                         src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
+                        ,
                         <div class="multi-link">
-                            <span>Dr Dre</span>,
+                            <span>Dr Dre</span>
                             <div>
                                 <a href="https://open.spotify.com/artist/6DPYiyq5kWVQS4RGwxzPC7" target="_blank"><img
                                         class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -386,7 +392,7 @@
                                         src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        et beaucoup d'autres.
+                        , et beaucoup d'autres.
                     </div>
                     <div class="spotify-integ">
                         <div>
