--- a/music/electro.html
+++ b/music/electro.html
@@ -96,8 +96,7 @@
                         <div>
                             <div>
                                 <div>
-                                    <iframe
-                                        src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
+                                    <iframe src="https://www.youtube-nocookie.com/embed/IcrbM1l_BoI"
                                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
                                 </div>
@@ -111,12 +110,6 @@
                 </article>
 
                 <article id="Martin Garrix">
-                    <figure class="float-right bordered">
-                        <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200" class="rounded-corners" />
-                        <figcaption>
-                            poster de Martin Garrix
-                        </figcaption>
-                    </figure>
                     <div class="multi-link ">
                         <span>Martin Garrix</span>
                         <div>
@@ -129,6 +122,12 @@
                         </div>
                     </div>
                     <div class="paragraph no-overflow">
+                            <figure class="float-right bordered">
+                                    <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200" class="rounded-corners" />
+                                    <figcaption>
+                                        poster de Martin Garrix
+                                    </figcaption>
+                                </figure>
                         DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec
                         son titre Animals en 2013.
                         Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
@@ -175,10 +174,10 @@
                                     alt="youtube link" /></a>
                         </div>
                     </div>
-                    <figure class="float-right bordered">
-                        <img src="../images/tiesto.jpg" alt="" width="200" class="rounded-corners" />
-                    </figure>
                     <div class="paragraph no-overflow">
+                        <figure class="float-right bordered">
+                            <img src="../images/tiesto.jpg" alt="" width="200" class="rounded-corners" />
+                        </figure>
                         DJ, compositeur et producteur musical néerlandais, il est considéré comme une grande figure
                         de la musique électronique,
                         aux côtés notamment de Paul van Dyk, Calvin Harris, Hardwell, David Guetta et Armin van
