https://github.com/oxypomme/PT19_20

--- a/music/pop.html
+++ b/music/pop.html
@@ -60,7 +60,7 @@
                       </div>
                   </div>. La musique
                   pop a bien évolué depuis cette époque.
-                  La pop est une version plus douce et mélancolique du rock. C’est un genre musical accessible au
+                  La pop est une version plus douce et mélancolique du<a href="http://wildgoat.fr/pulse/music/rock.html#">rock </a>. C’est un genre musical accessible au
                   grand public.
                   Elle se caractérise par des mélodies et harmonies vocaliques. Elle pioche ses influences dans
                   différents styles ( R&B, jazz, folk, soul, funk, classique, techno, latino…). Les chanteurs
@@ -182,7 +182,7 @@
                   Le pop rock est un genre musical mêlant le style pop et ses paroles légères à des chansons rock
                   typiquement basées sur la guitare. Les détracteurs du pop rock considèrent souvent le genre comme une
                   version plus commerciale et moins authentique du rock.
-                  Il est plus doux et plus accessible que le Rock and Roll. Les instruments utilisés sont le plus
+                  Il est plus doux et plus accessible que<a href="http://wildgoat.fr/pulse/music/rock.html#">le Rock and Roll </a>  . Les instruments utilisés sont le plus
                   souvent la guitare électrique, la basse, la batterie, le clavier et le synthétiseur.
               </p>
               <div class="paragraph">
@@ -630,7 +630,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-                  s</div>
+                  </div>
 
               <div class="spotify-integ">
                   <div>
@@ -666,8 +666,10 @@
                   Baroque Pop
               </h2>
               <p>
-                  Le genre est moins agressif, moins commercial, mais plus sérieux que la musique rock de l'époque. La
-                  pop baroque se différencie du rock progressif, qui fait également usage d'une instrumentation de
+                  Le genre est moins agressif, moins commercial, mais plus sérieux que la musiquecde l'époque. La
+                  pop baroque se différencie du
+                  <a href="#progressif"> rock progressif</a>
+                   , qui fait également usage d'une instrumentation de
                   musique classique, de par sa structure simpliste plus proche de la pop standard, et par son contenu
                   lyrique accessible à tous.
                   La pop baroque est une musique traditionnellement mélancolique et dramatique par rapport au sunshine
