--- a/music/electro.html
+++ b/music/electro.html
@@ -50,6 +50,7 @@
                 Il est considéré comme l'un des meilleurs événements musicaux électroniques du monde avec Tomorrowland,
                 l'Amsterdam Music Festival,
                 l'Electric Daisy Carnival et le Coachella.
+                <span class="source">Source : Wikipédia </span>
             </div>
 
             <section class="no-top-separator">
@@ -84,8 +85,9 @@
                         Atteint d'une dépression,
                         il se suicide à l'âge de 28 ans le 20 avril 2018.
                         Ses principaux titres sont wake me up, I could be the one, SOS.
+                        <span class="source">Source : Wikipédia </span> 
+                     </div>
 
-                    </div>
                     <div class="spotify-integ">
                         <div>
                             <iframe src="https://open.spotify.com/embed/track/4h8VwCb1MTGoLKueQ1WgbD"
@@ -137,6 +139,7 @@
                         le top dix dans une dizaine de pays,
                         et même à la première place au Royaume-Uni et en Belgique.
                         Ses titres les plus connus sont scared to be lonely, in the name of love.
+                        <span class="source">Source : Wikipédia </span>
                     </div>
                     <div class="spotify-integ">
                         <div>
@@ -177,6 +180,9 @@
                     <div class="paragraph no-overflow">
                         <figure class="float-right bordered">
                             <img src="../images/tiesto.jpg" alt="" width="200" class="rounded-corners" />
+                            <figcaption>
+                                Tiësto
+                            </figcaption>
                         </figure>
                         DJ, compositeur et producteur musical néerlandais, il est considéré comme une grande figure
                         de la musique électronique,
@@ -187,6 +193,7 @@
                         derrière Calvin Harris,
                         qui a engrangé 63 millions de dollars entre le 1er juin 2015 et le 1er juin 2016.
                         Ses titres les plus populaires sont red lights, secrets, wasted.
+                        <span class="source">Source : Wikipédia </span>
                     </div>
                     <div class="spotify-integ">
                         <div>
