--- a/music/rap.html
+++ b/music/rap.html
@@ -41,6 +41,7 @@
                     En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier single rap
                     dans le monde.
                 </div>
+                <span class="source">Source : Wikipédia, slate.fr </span>
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu"
@@ -106,6 +107,7 @@
                             Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
                             bientôt, les prélis.
                         </div>
+                        <span class="source">Source : Wikipédia </span>
                         <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/6Uk6MCdcT025QBTcXRFKDL"
@@ -152,6 +154,7 @@
                             Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
                             principaux titres sont princesse, on verra, ma dope.
                         </div>
+                        <span class="source">Source : Wikipédia </span>
                         <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/57I5KhEpQFC9XBgKt6nklL"
@@ -202,6 +205,7 @@
                             Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000
                             ventes.
                         </div>
+                        <span class="source">Source : Wikipédia </span>
                         <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu"
@@ -249,6 +253,7 @@
                             Victoires de la musique. Ses titres les plus populaires sont paradis,
                             défaite de famille et mes grands-parents.
                         </div>
+                        <span class="source">Source : Wikipédia </span>
                         <div class="spotify-integ">
                             <div>
                                 <iframe src="https://open.spotify.com/embed/track/2ICdvchXmDh5mdLyyL2opB"
@@ -394,6 +399,7 @@
                         </div>
                         , et beaucoup d'autres.
                     </div>
+                    <span class="source">Source : konbini.com </span>
                     <div class="spotify-integ">
                         <div>
                             <iframe src="https://open.spotify.com/embed/track/7MJQ9Nfxzh8LPZ9e9u68Fq"
