--- a/music/electro.html
+++ b/music/electro.html
@@ -85,8 +85,8 @@
                         Atteint d'une dépression,
                         il se suicide à l'âge de 28 ans le 20 avril 2018.
                         Ses principaux titres sont wake me up, I could be the one, SOS.
-                        <span class="source">Source : Wikipédia </span> 
-                     </div>
+                        <span class="source">Source : Wikipédia </span>
+                    </div>
 
                     <div class="spotify-integ">
                         <div>
@@ -124,12 +124,13 @@
                         </div>
                     </div>
                     <div class="paragraph no-overflow">
-                            <figure class="float-right bordered">
-                                    <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200" class="rounded-corners" />
-                                    <figcaption>
-                                        poster de Martin Garrix
-                                    </figcaption>
-                                </figure>
+                        <figure class="float-right bordered">
+                            <img src="../images/martingarrix.jpg" alt="Martin Garrix" width="200"
+                                class="rounded-corners" />
+                            <figcaption>
+                                poster de Martin Garrix
+                            </figcaption>
+                        </figure>
                         DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec
                         son titre Animals en 2013.
                         Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
@@ -222,5 +223,17 @@
                             mixer après la cérémonie du podium au sein du stadium.
                         </figcaption>
                     </figure>
+                </article>
+                <article id="aujourd'hui">
+                    <div class="paragraph no-overflow">
+                        De nos jours, la musique électronique connaît une popularité croissante, qui s'explique entre
+                        autre par une large diffusion,
+                        notamment grâce aux nombreux festivals.
+                        L'EDM inspire de nombreux autres artistes, c'est pourquoi les DJ multiplient les featuring avec
+                        d'autres chanteurs.
+                        Les Dj les plus populaires sont ( dans l'ordre croissant): <br />
+                        Martin Garrix, Marshmello, David Guetta, Calvin Harris, Tiësto, Armin van Buuren, Hardwell,
+                        Deadmau5, The Chainsmokers, Skrillex, et beaucoup d'autres.
+                        <span class="source">Source : Wikipédia </span>
                 </article>
             </section>
