--- a/music/rap.html
+++ b/music/rap.html
@@ -432,6 +432,23 @@
                         </figcaption>
                     </figure>
                 </section>
+                <article id="aujourd'hui">
+                    <div class="paragraph no-overflow">
+                        De nos jours, le rap est devenu la musique préférée des adolescents.
+                        D'après Pascal Cefran, animateur de la
+                        radio Mouv’, "le rap, c’est le rock d’hier et la pop d’aujourd’hui". Cependant, celui-ci souffre encore de
+                        clichés, voire de préjugés qui tendent à s’atténuer, comme la violence, l'agressivité, le sexisme, la répétitivité.
+                        Les rappeurs expriment davantage leurs émotions, dénoncent les stéréotypes: on peut parler de
+                        rap engagé. Certains
+                        professeurs de français font même étudier des chansons au collège ou en ateliers d’écriture.
+                        Le rap occupe 14 des 20 premières places du classement des artistes français les plus écoutés en
+                        streaming.
+                        Les rappeurs les plus riches aujourd'hui sont: <br />
+                        Lil Wayne,Ice Cube, Ronald ‘Slim’ Williams, Eminem, Master P, Kanye West, Russell Simmons, Dr.
+                        Dre, Sean Combs (Diddy), JAY-Z, et bien d'autres.
+                        <span class="source">Sources : la-croix.com, newsmonkey.be </span>
+                    </div>
+                </article>
     </main>
     <footer>
         <iframe src="../footer.html"></iframe>
